--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,17 +1,4 @@
 <h1>Editar Produto</h1>
 
-<%= form_with model: @product do |form| %>
-  <div>
-  <%= form.label :name, "Nome" %>
-  <%= form.text_field :name%>
-  </div>
-  <div>
-  <%= form.label :price, "Preço" %>
-  <%= form.text_field :price%>
-  </div>
-  <div>
-  <%= form.submit %>
-  </div>
-
-<% end %>
+<%= render  "form" %>
 
