--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,5 +1,6 @@
-<h3><%=@product.name%></h3>
-<h3><%=@product.price%></h3>
+<h3><%= @product.name%></h3>
+<h3><%= @product.price%></h3>
+<div><%= image_tag @product.avatar, height: 300%></div>
 
 <div><%= link_to  "Início", root_path %></div>
 <div><%= link_to  "Delete", product_path, data: {turbo_method: :delete, turbo_confirm: "Você tem certeza?"} %></div>
